others/crackmes-one/glibc-2.34/build/conform/symlist-XPG4.err
In file included from /tmp/tmpqx_pd3ha/test.c:1:
/usr/lib/gcc/x86_64-linux-gnu/8/include/varargs.h:4:2: error: #error "GCC no longer implements <varargs.h>."
 #error "GCC no longer implements <varargs.h>."
  ^~~~~
/usr/lib/gcc/x86_64-linux-gnu/8/include/varargs.h:5:2: error: #error "Revise your code to use <stdarg.h>."
 #error "Revise your code to use <stdarg.h>."
  ^~~~~
